tests/valid/binary_operators/associativity2.rs
/*
executionExitCode: 1
*/

main(): i32 {
    return 6 / 3 / 2;
}