tests/invalid/conditional_expression/malformed_ternary_2.rs
/*
fail: 1
*/

main(): i32 {
    return 1 ? 2 ? 3 : 4;
}